# llm-research-genie

./: .gitignore  Jenkinsfile  README.md  azure-deploy-jenkins.sh  build-and-push-docker-image.sh  list_package_versions.py  main.py  pyproject.toml  requirements.txt  setup-app-infrastructure.sh
notebook/: test.ipynb
research_and_analyst/api/services/: report_service.py
research_and_analyst/backend_server/: workflow.py
research_and_analyst/exception/: custom_exception.py
research_and_analyst/notebook/: test.ipynb
research_and_analyst/prompt_lib/: prompts.py
research_and_analyst/utils/: config_loader.py  model_loader.py
