[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support
build-backend = "setuptools.build_meta"

[project]
name = "llm-research-genie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel==6.30.1",
    "langchain-community==0.3.30",
    "langchain-core==0.3.78",
    "langchain-google-genai==2.1.12",
    "langchain-groq==0.3.8",
    "langchain-openai==0.3.34",
    "langgraph==0.6.8",
    "tavily-python==0.7.12",
    "wikipedia==1.4.0",
]

# Optional: authors, license
authors = [{ name = "Shiraj S" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["research_and_analyst"]